[package]
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["wasm", "api-bindings", "web-programming", "cryptography"]
description = "Easy to use, secure, non opinionated JWT (JSON Web Tokens) implementation for Rust."
edition = "2018"
homepage = "https://github.com/jedisct1/rust-jwt-simple"
keywords = ["jwt", "jws", "authentication", "tokens", "json"]
license = "ISC"
name = "jwt-simple"
readme = "README.md"
repository = "https://github.com/jedisct1/rust-jwt-simple"
version = "0.11.2"

[dependencies]
anyhow = "1.0"
binstring = "0."
ciborium = {version = "0.2.0", optional = true}
coarsetime = "0.1"
ct-codecs = "1.1"

# ecdsa
k256 = {version = "0.11", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p256 = {version = "0.11", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p384 = {version = "0.11", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}

# eddsa
ed25519-compact = {version = "2.0", features = ["pem"], optional = true}

# hmac
hmac-sha1-compact = {version = "1.1", optional = true}
hmac-sha256 = {version = "1.1", features = ["traits010"], optional = true}
hmac-sha512 = {version = "1.1", features = ["traits010", "sha384"], optional = true}

# rsa
rsa = {version = "0.7", optional = true}
spki = {version = "0.6", optional = true}

rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
zeroize = "1.5"

[features]
default = ["rsa"]

cwt = ["ciborium"]
ecdsa = ["hmac", "dep:k256", "dep:p256", "dep:p384"]
eddsa = ["dep:ed25519-compact", "dep:hmac-sha1-compact", "dep:hmac-sha256"]
hmac = ["dep:hmac-sha1-compact", "dep:hmac-sha256", "dep:hmac-sha512"]
rsa = ["hmac", "dep:rsa", "dep:spki"]

[dev-dependencies]
benchmark-simple = "0.1.7"

[[bench]]
harness = false
name = "benchmark"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"

[profile.bench]
codegen-units = 1
