[package]
categories = ["wasm", "api-bindings", "web-programming", "cryptography"]
description = "Easy to use, secure, opinionated JWT (JSON Web Tokens) implementation for Rust."
edition = "2021"
homepage = "https://github.com/keygateio/keygate-jwt"
keywords = ["jwt", "jws", "authentication", "tokens", "json"]
license = "MIT"
name = "keygate-jwt"
readme = "README.md"
repository = "https://github.com/keygateio/keygate-jwt"
version = "1.4.1"

[dependencies]
coarsetime = "0.1"
ct-codecs = "1.1"

# ecdsa
k256 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p256 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p384 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
rand = {version = "0.8", features = [], optional = true}

# eddsa
ed25519-compact = {version = "2.0", features = ["pem"], optional = true}
sha2 = {version = "0.10"}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["eddsa", "ecdsa"]

ecdsa = ["dep:k256", "dep:p256", "dep:p384", "dep:rand"]
eddsa = ["dep:ed25519-compact"]

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"

[profile.bench]
codegen-units = 1
