[package]
categories = ["wasm", "api-bindings", "web-programming", "cryptography"]
description = "Easy to use, secure, and opinionated JWT (JSON Web Tokens) implementation for Rust"
edition = "2021"
homepage = "https://github.com/keygateio/keygate-jwt"
keywords = ["jwt", "jws", "authentication", "tokens", "json"]
license = "MIT"
name = "keygate-jwt"
readme = "README.md"
repository = "https://github.com/keygateio/keygate-jwt"
version = "1.4.2"

[dependencies]
base64ct = "1.6"
coarsetime = "0.1"
hex = "0.4"

# ecdsa
k256 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p256 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
p384 = {version = "0.13", features = ["ecdsa", "std", "pkcs8", "pem"], optional = true}
rand = {version = "0.8", default-features = true, optional = true}

# eddsa
ed25519-compact = {version = "2.0", features = ["pem"], optional = true}
sha2 = {version = "0.10"}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["eddsa", "ecdsa"]

ecdsa = ["dep:k256", "dep:p256", "dep:p384", "dep:rand"]
eddsa = ["dep:ed25519-compact"]

[profile.release]
incremental = false
